# python-fmask

./: .flake8  .gitignore  .hgignore  .readthedocs.yaml  CreateDistribution.txt  INSTALL.txt  README.md  pyproject.toml  setup.py
.github/workflows/: runflake8.yml
c_src/: fillminima.c
doc/: Makefile  make.bat  requirements.txt
doc/source/: conf.py  fmask_config.rst  fmask_fillminima.rst  fmask_fmask.rst  fmask_fmaskerrors.rst  fmask_landsatTOA.rst  fmask_landsatangles.rst  fmask_saturationcheck.rst  fmask_valueindexes.rst  fmask_zerocheck.rst  index.rst  releasenotes.rst
fmask/: __init__.py  angles.py  config.py  fillminima.py  fmask.py  fmaskerrors.py  landsatTOA.py  landsatangles.py  saturationcheck.py  sen2meta.py  valueindexes.py  zerocheck.py
fmask/cmdline/: __init__.py  sentinel2Stacked.py  sentinel2makeAnglesImage.py  usgsLandsatMakeAnglesImage.py  usgsLandsatSaturationMask.py  usgsLandsatStacked.py  usgsLandsatTOA.py
src/: fillminima.c  valueindexes.c
